<?xml version="1.0"?>
<package format="3">
  <name>microuwb_bringup</name>
  <version>0.0.1</version>
  <description>Top-level launch files for MicroUWB-Nav simulation</description>
  <maintainer email="amogh@todo.todo">Amogh Singh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>microuwb_description</exec_depend>
  <exec_depend>microuwb_gazebo</exec_depend>
  <exec_depend>microuwb_uwb</exec_depend>
  <exec_depend>microuwb_control</exec_depend>
  <exec_depend>microuwb_navigation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>